@@ -1,3 +1,7 @@
+Wed Feb  5 14:41:56 2014  Koichi Sasada  <ko1@atdot.net>
+
+	* vsnprintf.c: remove duplicated def of `UNINITIALIZED_VAR()'.
+
 Wed Feb  5 14:40:16 2014  Koichi Sasada  <ko1@atdot.net>
 
 	* ext/objspace/objspace_dump.c (dump_object): use STR_SHARED_P()
